--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -16,13 +16,13 @@
         "/report/report_menu?type=site report",
         "/report/report_menu?type=aggregate report",
         "/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock",
-        //"/report/stock_out_estimates?type=verified_by_supervision&name=stock_movement"
+        "/report/report_menu?type=stock movement&name=stock_movement"
         // "/report/index?stock=true"
       ];
       // var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
       // var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Reports"];
-      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
-      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Months of Stock"];
+      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg', 'd_icon.jpeg'];
+      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Months of Stock", "Stock Movement"];
 <%end%>
   
     loadMenu(title,icons,path);
