--- a/app/views/report/report_menu.html.erb
+++ b/app/views/report/report_menu.html.erb
@@ -51,7 +51,7 @@
       <caption style="font-family: arial;font-size:34px;"><%= params[:type].titleize %> Details</caption>
 
 
-      <tr style="display:<%= params[:type].eql?('site report') ? '' : 'none' %> ">
+      <tr style="display:<%= ['site report', 'stock movement'].include?(params[:type]) ? '' : 'none' %> ">
         <td id="site_lbl">Select Site</td>
         <td>
           <select name="site_name" id='site'>
