updated stock movement report

--- a/app/views/report/_months_of_stock.erb
+++ b/app/views/report/_months_of_stock.erb
@@ -135,7 +135,7 @@
     
     }
     
-    return [{name: 'Month(s)', showInLegend: true, data: correctedWeights, Color: 'red', pointWidth: 25}];
+    return [{name: 'Month(s) of stock', showInLegend: true, data: correctedWeights, Color: 'red', pointWidth: 25}];
   }
  
     </script>
