--- a/app/views/report/_months_of_stock.erb
+++ b/app/views/report/_months_of_stock.erb
@@ -68,17 +68,17 @@
       yAxis: {
         align: 'left',
         plotBands: [{ // mark the weekend
-            color: '#66CDAA',
+            color: '#CCCC33', //'#66CDAA',
             from: 2,
             to: 5
           },
           { 
-            color: 'rgb(225, 225, 225)',
+            color: '#FF6666', //rgb(225, 225, 225)',
             from: 0,
             to: 2
           },
           {
-            color: 'rgb(225, 225, 225)',
+            color: '#66CC33', //'rgb(225, 225, 225)',
             from: 5,
             to: 9
           }],
@@ -131,11 +131,10 @@
     for(var i = 0; i < stocks[site].length; i++) {
       if (i >= min && i <= max){
         correctedWeights.push(parseFloat(stocks[site][i][1]));
-      }
-    
+      }    
     }
     
-    return [{name: 'Month(s) of stock', showInLegend: true, data: correctedWeights, Color: 'red', pointWidth: 25}];
+    return [{name: 'Month(s) of stock', showInLegend: true, data: correctedWeights, color: 'blue', pointWidth: 25}];
   }
  
     </script>
