reverted color coded

--- a/app/views/report/_months_of_stock.erb
+++ b/app/views/report/_months_of_stock.erb
@@ -68,17 +68,17 @@
       yAxis: {
         align: 'left',
         plotBands: [{ // mark the weekend
-            color: '#CCCC33', //'#66CDAA',
+            color: '#66CDAA',
             from: 2,
             to: 5
           },
           { 
-            color: '#FF6666', //rgb(225, 225, 225)',
+            color: 'rgb(225, 225, 225)',
             from: 0,
             to: 2
           },
           {
-            color: '#66CC33', //'rgb(225, 225, 225)',
+            color: 'rgb(225, 225, 225)',
             from: 5,
             to: 9
           }],
