--- a/app/views/report/aggregate_report.html.erb
+++ b/app/views/report/aggregate_report.html.erb
@@ -201,11 +201,11 @@
     <tr>
       <th style="width: 10%">Date</th>
       <th style="width: 20%">Drug</th>
-      <th style="width: 15%">Amount Prescribed</th>
-      <th style="width: 15%">Amount Dispensed</th>
-      <th style="width: 15%">Amount Relocated</th>
+      <th style="width: 15%">Prescribed</th>
+      <th style="width: 15%">Dispensed</th>
+      <th style="width: 10%">Difference<br>(Pres - Disp)</th>
+      <th style="width: 15%">Relocated</th>
       <th style="width: 15%">People Who Received Drugs</th>
-      <th style="width: 10%">Difference</th>
     </tr>
     </thead>
     <tbody>
@@ -216,10 +216,10 @@
               <td><%= drug %></td>
               <td><%= number_with_delimiter(value["prescription"], :delimeter => ',') %></td>
               <td><%= number_with_delimiter(value["dispensation"], :delimeter => ',') %></td>
-              <td><%= number_with_delimiter(value["relocation"], :delimeter => ',') %></td>
-              <td><%= number_with_delimiter(value["ppo_who_received_drugs"], :delimeter => ',') %></td>
               <% percent = ((value["prescription"].to_f - value["dispensation"].to_f)/value["prescription"].to_f).round(2) rescue 0 %>
               <td><%= number_with_delimiter((value["prescription"] - value["dispensation"]), :delimeter => ',' ) %> (<%= percent.abs * 100 %>%)</td>
+              <td><%= number_with_delimiter(value["relocation"], :delimeter => ',') %></td>
+              <td><%= number_with_delimiter(value["ppo_who_received_drugs"], :delimeter => ',') %></td>
             </tr>
         <% end %>
     <% end %>
