added drug shortnames to stock reports

--- a/app/views/report/_months_of_stock.erb
+++ b/app/views/report/_months_of_stock.erb
@@ -55,7 +55,7 @@
           rotation: false,
           lineColor: 'black',
           formatter: function() {
-            return this.value
+            return drug_map[this.value]
           },
           style: {
             color: 'black',
