--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -21,7 +21,7 @@
       ];
       // var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
       // var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Reports"];
-      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg', 'd_icon.jpeg'];
+      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg', 'stock_movement.gif'];
       var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Months of Stock", "Stock Movement"];
 <%end%>
   
