--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -15,14 +15,15 @@
         "/report/report_menu?type=drug report",
         "/report/report_menu?type=site report",
         "/report/report_menu?type=aggregate report",
+        "/report/report_menu?type=delivery report",
         "/report/stock_out_estimates?type=verified_by_supervision&name=months_of_stock",
         "/report/report_menu?type=stock movement&name=stock_movement"
         // "/report/index?stock=true"
       ];
       // var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg'];
       // var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Stock Reports"];
-      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg', 'stock_movement.gif'];
-      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Months of Stock", "Stock Movement"];
+      var icons = ['pills3.png','Hospital-icon.png','aggregate.png', 'd_icon.jpeg', 'd_icon.jpeg', 'stock_movement.gif'];
+      var title = ['Drug Report', 'Site Report', 'Aggregate Report', "Delivery Report", "Months of Stock", "Stock Movement"];
 <%end%>
   
     loadMenu(title,icons,path);
