--- a/app/views/report/report_menu.html.erb
+++ b/app/views/report/report_menu.html.erb
@@ -1,53 +1,53 @@
 <script language="javascript" type="text/javascript" src="/javascripts/jsDatePick.min.1.3.js"></script>
 
 <script type="text/javascript">
-    window.onload = function(){
-        new JsDatePick({
-            useMode:2,
-            target:"start_date",
-            dateFormat:"%d-%M-%Y"
+  window.onload = function(){
+    new JsDatePick({
+      useMode:2,
+      target:"start_date",
+      dateFormat:"%d-%M-%Y"
 
-        });
-        new JsDatePick({
-            useMode:2,
-            target:"end_date",
-            dateFormat:"%d-%M-%Y"
+    });
+    new JsDatePick({
+      useMode:2,
+      target:"end_date",
+      dateFormat:"%d-%M-%Y"
 
-        });
-    };
+    });
+  };
 </script>
 
 <style type="text/css">
-    input{
-        width: auto;
-        font-size: 120%;
-    }
-    select{
-        width: 100%;
-        font-size: 120%;
-    }
-    button{
-        width: auto;
-        font-size: 28px;
-    }
-    table.halfpage{
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        font-family: arial;
-    }
+  input{
+    width: auto;
+    font-size: 120%;
+  }
+  select{
+    width: 100%;
+    font-size: 120%;
+  }
+  button{
+    width: auto;
+    font-size: 28px;
+  }
+  table.halfpage{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: arial;
+  }
 
-    .halfpage caption{
-        font-weight:bold;
-    }
+  .halfpage caption{
+    font-weight:bold;
+  }
 </style>
 <link rel="stylesheet" type="text/css" media="all" href="/stylesheets/jsDatePick_ltr.min.css" />
 
 <div  >
 
-    <form method="post" action="/report/process_report" >
-      <table class="halfpage" cellspacing="10px" cellpadding="20px">
+  <form method="post" action="/report/process_report" >
+    <table class="halfpage" cellspacing="10px" cellpadding="20px">
       <caption style="font-family: arial;font-size:34px;"><%= params[:type].titleize %> Details</caption>
 
 
@@ -56,7 +56,7 @@
         <td>
           <select name="site_name" id='site'>
             <% (@sites || []).each do |site| %>
-                <option><%= site %></option>
+              <option><%= site %></option>
             <% end %>
           </select>
         </td>
@@ -66,56 +66,91 @@
         <td>
           <select name="drug" id='drug'>
             <% (@drugs || []).each do |drug| %>
-                <option><%= drug %></option>
+              <option><%= drug %></option>
             <% end %>
           </select>
         </td>
       </tr>
       <tr>
         <td id="start_date_lbl">Start Date</td>
-        <td><input id="start_date" type="text" name="start_date" value=""></td>
+        <td><input onmousedown ="clear(['d_code'])" id="start_date" type="text" name="start_date" value=""></td>
       </tr>
       <tr>
-        <td id="end_date_lbl">End Date</td>
+        <td onmousedown ="clearInput(['d_code'])" id="end_date_lbl">End Date</td>
         <td><input id="end_date" type="text" name="end_date" value=""></td>
       </tr>
+
+      <tr style="display:<%= params[:type].eql?('delivery report') ? '' : 'none' %>" >
+        <td colspan="2" style="text-align: center;">OR <br />Enter Delivery Code Below</td>
+      </tr>
+      <tr style="display:<%= params[:type].eql?('delivery report') ? '' : 'none' %>" >
+        <td id="delivery_code">Delivery Code</td>
+        <td><input onmousedown ="clearInput(['start_date', 'end_date'])" id="d_code" type="text" name="delivery_code" value=""></td>
+      </tr>
+
       <%= hidden_field_tag("report_type", params[:type])%>
-      </table>
-    </form>
-      <div style="text-align: center;height: 100px;">
-        <button onclick="verify_form();" style="width: 300px;height:60px;border-radius: 30px;" class="main">Generate</button>
-      </div>
+    </table>
+  </form>
+  <div style="text-align: center;height: 100px;">
+    <button onclick="verify_form();" style="width: 300px;height:60px;border-radius: 30px;" class="main">Generate</button>
+  </div>
 </div>
 
 <script type="text/javascript">
-    <!--
-    function verify_form()
-    {
+  <!--
 
-        var type = '<%= params[:type]%>';
-        if(document.getElementById('start_date').value.trim() == "")
-        {
-            jAlert("Please provide start date for report", "Incomplete Information");
-        }
-        else if(document.getElementById('end_date').value.trim() == "")
-        {
-            jAlert("Please provide end date for report", "Incomplete Information");
-        }
-        else if((type == "site report") && (document.getElementById('site').value.trim() == ""))
-        {
-            jAlert("Please provide site name", "Incomplete Information");
-        }
-        else if((type= "drug report") && (document.getElementById('drug').value.trim() == ""))
-        {
-            jAlert("Please provide drug name", "Incomplete Information");
-        }
-        else
-        {
-            document.forms[0].submit();
-        }
-
-
+  function clearInput(arr){
+    var type = '<%= params[:type]%>';
+    if (type == "delivery report"){
+      for( var i = 0; i < arr.length; i ++){
+        document.getElementById(arr[i]).value = "";
+      }
     }
-    //-->
+  }
+  
+  function verify_form()
+  {
+   
+    var type = '<%= params[:type]%>';
+    if(type == "delivery report")
+    {
+      if (document.getElementById('start_date').value.trim() == "" && document.getElementById('d_code').value.trim() == ""){
+        jAlert("Please provide start date for report", "Incomplete Information");
+      }
+      else if (document.getElementById('end_date').value.trim() == "" && document.getElementById('d_code').value.trim() == ""){
+        jAlert("Please provide end date for report", "Incomplete Information");
+      }
+      else if ((document.getElementById('d_code').value.trim() == "") && (document.getElementById('start_date').value.trim() == "") &&
+        (document.getElementById('end_date').value.trim() == "")){
+        jAlert("Please provide delivery code or date range", "Incomplete Information");
+      }
+      else{
+        document.forms[0].submit();
+      }     
+    }
+    else if(document.getElementById('start_date').value.trim() == "")
+    {
+      jAlert("Please provide start date for report", "Incomplete Information");
+    }
+    else if(document.getElementById('end_date').value.trim() == "")
+    {
+      jAlert("Please provide end date for report", "Incomplete Information");
+    }
+    else if((type == "site report") && (document.getElementById('site').value.trim() == ""))
+    {
+      jAlert("Please provide site name", "Incomplete Information");
+    }
+    else if((type= "drug report") && (document.getElementById('drug').value.trim() == ""))
+    {
+      jAlert("Please provide drug name", "Incomplete Information");
+    }   
+    else
+    {
+      document.forms[0].submit();
+    }
+
+
+  }
+  //-->
 </script>
 
