added drug utilization graph

--- a/app/views/layouts/report_layout.html.erb
+++ b/app/views/layouts/report_layout.html.erb
@@ -33,7 +33,7 @@
       <td style="width: 60px;"><img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height:60px;"></td>
 
       <td style="text-align: center;vertical-align: text-top;">
-        <span style="font-size: 30px;color: #C0C0C0;font-family:arial;">
+        <span style="font-size: 150%;color: #C0C0C0;font-family:arial;">
             <%= @title  %>
           </span>
       </td>
@@ -44,7 +44,7 @@
 
 </div>
 
-<div style="overflow: auto;">
+<div style="overflow: auto;height: 89vh;">
   <%= yield %>
 </div>
 
