--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -130,7 +130,7 @@
         height: 45vh;
     }
 </style>
-<div style="height: 90vh; overflow: auto;">
+<div >
   <div style="text-align: center;">
     <table  style="width: 99%;margin-left: 0.5%;">
       <tr>
