--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -25,7 +25,7 @@ h1, p { margin:0 0 1em }
     left:0;
     top:0;
     background: #15191C;
-    height:100px;
+    height:10vh;
     min-width: 1048px;
     width: 100%;
 }
