changed drug report to focus on stocks

--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -167,10 +167,16 @@
                     dateTimeLabelFormats: { // don't display the dummy year
                         month: '%e. %b',
                         year: '%b'
+                    },
+                    title : {
+                        text:"Days"
                     }
                 },
                 yAxis: {
-                    min: 0
+                    min: 0,
+                    title : {
+                        text:"Amount of pills"
+                    }
                 },
                 title: {
                   text : title
