--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -1,149 +1,143 @@
-
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function() {
-        $('#drugs').dataTable({
-            "aaSorting": [[ 0, "asc" ]],
-            'iDisplayLength': 10,
-            "bLengthChange": false,
-            "bFilter": false
-        });
-    } );
-</script>
-
-<script type="text/javascript">
-  function pie_graph()
-  {
-      try{
-          // Build the chart
-          var chart = new Highcharts.Chart({
-              chart: {
-                  plotBackgroundColor: null,
-                  plotBorderWidth: null,
-                  plotShadow: false,
-                  renderTo: 'pie'
-              },
-              title: {
-                  text: 'Dispensation Vs Prescription Vs Relocation'
-              },
-              tooltip: {
-                  pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-              },
-              plotOptions: {
-                  pie: {
-                      allowPointSelect: true,
-                      cursor: 'pointer',
-                      dataLabels: {
-                          enabled: true,
-                          color: '#000000',
-                          connectorColor: '#000000',
-                          formatter: function() {
-                              return '<b>'+ this.point.name +'</b>: '+ this.percentage.toFixed(2) +' %';
-                          }
-                      }
-                  }
-              },
-              series: [{
-                  type: 'pie',
-                  text: 'Dispensation Vs Prescription Vs Relocation',
-                  name: 'Dispensation Vs Prescription Vs Relocation',
-                  data: [["Prescriptions", <%=@prescription %>],["Dispensations", <%=@dispensation %>], ["Relocations", <%=@relocation %>]]
-
-
-              }],
-              exporting: { enabled: false },
-              credits: {enabled: false}
-          });
-
-
-      }
-      catch(ex)
-      {
-          alert('PIE error in jQuery call:' + ex);
-      }
-  }
-
-  function trend()
-  {
-      try{
-
-          var prescriptions = [];
-          var dispensations = [];
-          var relocations = [];
-
-        <% (@days || []).each do |day|%>
-                prescriptions.push([Date.UTC(<%= day.strftime('%Y') %>,<%= day.strftime('%m').to_i - 1 %>,<%= day.strftime('%d') %>), <%= @values[day]['prescription'] %>]);
-                dispensations.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>),<%= @values[day]['dispensation'] %>]);
-                relocations.push([Date.UTC(<%= day.year %>,<%= day.month - 1 %>,<%= day.day %>),<%= @values[day]['relocation'] %>]);
-          <% end %>
-
-          var chart = new Highcharts.Chart({
-              chart: {
-                  renderTo: "trends"
-              },
-              xAxis: {
-
-                  title: {
-                      text: 'Days'
-                  },
-                  type:'datetime',
-                  dateTimeLabelFormats: {
-                      month: '%e. %b',
-                      year: '%b'
-                  }
-
-              },
-              tooltip: {
-                  formatter: function() {
-                      return '<b>'+ this.series.name +'</b><br/>'+
-                              Highcharts.dateFormat('%e %b %Y', this.x) +': '+ this.y +' pills';
-                  }
-              },
-              yAxis: {
-                  title: {
-                      text: 'Dose Amounts'
-                  },
-                  min : 0
-              },
-              title: {
-                  text : "Drug Utilization Trend"
-              },
-              series: [{name: "Prescriptions", data: prescriptions, color:"#99FF00"}, {name: "Dispensations", data: dispensations, color: "#FF8000"}, {name: "Relocations", data: relocations, color: "#000000"}],
-              exporting: { enabled: false },
-              credits: {enabled: false}
-          });
-
-
-      }
-      catch(ex)
-      {
-          alert('error in jQuery call:' + ex);
-      }
-  }
-  setTimeout("pie_graph()",20);
-  setTimeout("trend()",20);
-
-</script>
 <style type="text/css">
+    input{
+        width: auto;
+        font-size: 28px;
+    }
+    select{
+        width: 100%;
+        font-size: 28px;
+    }
+    button{
+        width: auto;
+        font-size: 28px;
+    }
+    table.fullpage{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -1%;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .halfpage tr{
+        height: 80px;
+
+    }
+
+    .link{
+        float: right;
+        position: absolute;
+        z-index: 1;
+        right: 1%;
+        top: 4px;
+    }
+
+    th.stylish{
+        text-align: left;
+        font-size: 16px;
+        background: #66CC66;
+        padding: 0px;
+        padding-top: 2px;
+        color: black;
+    }
+    #datalist td{
+        text-align: left;
+        font-size: 16px;
+        color: darkslategrey;
+        background-color: azure;
+    }
+
+    .header {
+        position: absolute;
+        top: 3%;
+        z-index: 0;
+        height: 10%;
+        overflow: hidden;
+    }
+
     div.graph{
         border: 1px solid #15191C;
         width: 100%;
         height: 45vh;
     }
 </style>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
+        $('#datalist').dataTable({
+            "aaSorting": [[ 0, "asc" ]],
+            'iDisplayLength': 10,
+            "bLengthChange": false,
+            "bFilter": false
+        });
+    } );
+
+    function trend(counts)
+    {
+        try{
+
+            var chart = new Highcharts.Chart({
+                chart: {
+                    renderTo: "trends"
+                },
+                xAxis: {
+
+                    title: {
+                        text: 'Days'
+                    },
+                    type:'datetime',
+                    dateTimeLabelFormats: {
+                        month: '%e. %b',
+                        year: '%b'
+                    }
+
+                },
+                tooltip: {
+                    formatter: function() {
+                        return '<b>'+ this.series.name +'</b><br/>'+
+                                Highcharts.dateFormat('%e %b %Y', this.x) +': '+ this.y +' pills';
+                    }
+                },
+                yAxis: {
+                    title: {
+                        text: 'Pill Count'
+                    },
+                    min : 0
+                },
+                title: {
+                    text : "Stocks Trend"
+                },
+                series: [{name: "Supervised Counts", data: counts, color:"#FF8000"}],
+                exporting: { enabled: false },
+                credits: {enabled: false}
+            });
+
+
+        }
+        catch(ex)
+        {
+            alert('error in jQuery call:' + ex);
+        }
+    }
+
+</script>
+
+
 <div >
+  <span style="font-weight: bold;margin-left: 0.5%;">Select Site</span>
+  <select id="sites" style="margin-left: 3%; width: 20%; font-size: 20px;" name="site_name" id='site' onchange="loadSite(this.value)">
+    <% (@sites || []).each do |site| %>
+        <option><%= site %></option>
+    <% end %>
+  </select>
+
+</div>
+
+<div>
   <div style="text-align: center;">
     <table  style="width: 99%;margin-left: 0.5%;">
       <tr>
-        <td width="50%">
+        <td width="100%">
           <div  class="graph">
             <div style="height: 98%;" id="trends">
-
-            </div>
-          </div>
-        </td>
-        <td>
-          <div  class="graph">
-            <div style="height: 98%;" id="pie">
 
             </div>
           </div>
@@ -153,33 +147,134 @@
   </div>
 
   <div style="width: 100%;margin-top:5px; text-align: center;">
-    <table class="display" id="drugs" width="100%">
+    <table class="display" id="datalist" width="100%">
       <thead>
-      <tr>
-        <th>Date</th>
-        <th>Prescribed</th>
-        <th>Dispensed</th>
-        <th>Difference (Pres - Disp)</th>
-        <th>Relocated</th>
-        <th>People Who Received Drugs</th>
-      </tr>
+          <tr>
+            <th>Date</th>
+            <th>Available Stock<br>(Supervised)</th>
+            <th>Difference with<br> clinic stock</th>
+            <th>People  <br>Precribed Drug</th>
+            <th>People <br>Dispensed Drug</th>
+            <th>People Who Didn't <br> Receive Drug</th>
+          </tr>
       </thead>
       <tbody>
-      <% (@values || []).each do |day, value|%>
-          <tr>
-            <td><%= day.strftime('%d %B %Y') %></td>
-            <td><%= number_with_delimiter(value["prescription"], :delimeter => ',') %></td>
-            <td><%= number_with_delimiter(value["dispensation"], :delimeter => ',') %></td>
-            <% percent = ((value["prescription"].to_f - value["dispensation"].to_f)/value["prescription"].to_f).round(2) rescue 0 %>
-            <td><%= number_with_delimiter((value["prescription"] - value["dispensation"]), :delimeter => ',' ) %> (<%= percent.abs * 100 %>%)</td>
-            <td><%= number_with_delimiter(value["relocation"], :delimeter => ',') %></td>
-            <td><%= number_with_delimiter(value["ppo_who_received_drugs"], :delimeter => ',') %></td>
-          </tr>
-      <% end %>
+
       </tbody>
 
     </table>
 
   </div>
-
 </div>
+
+<script type="text/javascript">
+    <!--
+
+    var facilities = {};
+    <% @values.keys.each do |facility|%>
+
+    facilities["<%= facility %>"] = {};
+    <%@values[facility].each do |date, values|%>
+        <% next if values["supervision_count"] == 0 %>
+    facilities["<%= facility %>"]["<%= date %>"] = {"supervision" :<%= values["supervision_count"].to_i %>,
+                                                    "clinic" : <%= values["clinic_count"].to_i %>,
+                                                    "ppo_who_received_drugs": <%= values["ppo_who_received_drugs"] %>,
+                                                    "ppo_prescribed_drugs": <%= values["ppo_prescribed_drugs"] %>};
+
+
+    <%end%>
+    <%end%>
+
+
+    function loadSite(site)
+    {
+        var data = facilities[site];
+        var days = Object.keys(data);
+        var table = document.getElementById("datalist");
+        var supervised_array = [];
+
+        days.sort(function(a,b){
+            return new Date(a)-new Date(b);
+        }).reverse();
+
+        while(table.rows.length > 1)
+        {
+            table.deleteRow(1);
+        }
+
+        for (var i = 0; i < days.length; i++){
+            var day = days[i];
+            var row = create("tr", "table-row", "");
+            row.style.width = "100%";
+
+            var td1 = create("td", "table-data", new Date(day).toLocaleFormat('%d %b %Y'));
+            td1.style.textAlign = "left"
+            row.appendChild(td1);
+
+
+            var td2 = create("td", "table-data",data[day]["supervision"].toString()) ;
+            td2.style.textAlign = "center";
+            row.appendChild(td2)
+
+            var td3 = create("td", "table-data", data[day]['clinic'].toString());
+            td3.style.textAlign = "center";
+            row.appendChild(td3)
+
+            var td4 = create("td", "table-data", data[day]["ppo_prescribed_drugs"]);
+            td4.style.textAlign = "center";
+            row.appendChild(td4)
+
+
+            var td5 = create("td", "table-data", data[day]['ppo_who_received_drugs'].toString());
+            td5.style.textAlign = "center";
+            row.appendChild(td5)
+
+            var td7 = create("td", "table-data", get_ppo_who_not_give_drug(data[day]['ppo_prescribed_drugs'],data[day]['ppo_who_received_drugs']));
+            td7.style.textAlign = "center";
+            row.appendChild(td7)
+
+            var utc = new Date(day);
+            table.appendChild(row);
+
+            supervised_array.push([Date.UTC(utc.getFullYear(), utc.getMonth() ,utc.getDate()), data[day]['supervision']]);
+            ;
+        }
+        trend(supervised_array);
+    }
+
+    function create(divType, type, data){
+        var node = document.createElement(divType);
+        node.style.diplay = type;
+        if (divType == "tr"){
+            node.style.fontSize = "12px";
+            node.style.padding = "0px";
+            node.style.background = "#FFFFFF";
+        }
+        if (data != ""){
+            node.innerHTML = data;
+        }
+        return node;
+    }
+
+    function get_pres_disp_diff(pres, disp){
+        var diff = pres - disp;
+        diff = diff.toString() +" ("+ Math.abs((((pres - disp)/pres)*100).toFixed(2)).toString() + "%)"
+        return diff;
+    }
+
+    function get_ppo_who_not_give_drug(pres, disp){
+        var diff = pres - disp;
+         if (diff < 0)
+         {
+             diff = "More recieved"
+         }
+        return diff.toString();
+    }
+    loadSite(document.getElementById("sites").value);
+
+
+
+    //-->
+</script>
+
+
