--- a/app/views/report/drug_utilization_report.html.erb
+++ b/app/views/report/drug_utilization_report.html.erb
@@ -262,7 +262,10 @@
         days.sort(function(a,b){
             return new Date(a)-new Date(b);
         }).reverse();
-        $("#datalist > tbody").html("");
+        while(table.rows.length > 1)
+        {
+            table.deleteRow(1);
+        }
 
         for (var i = 0; i < days.length; i++){
             var day = days[i];
