changed style of datatable and changed code for adding rows to utilization report

--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -149,7 +149,7 @@
   <div style="width: 100%;margin-top:5px; text-align: center;">
     <table class="display" id="datalist" width="100%">
       <thead>
-          <tr>
+          <tr style="background-color:#66CC66">
             <th>Date</th>
             <th>Available Stock<br>(Supervised)</th>
             <th>Difference with<br> clinic stock</th>
