--- a/app/views/report/drug_utilization_report.html.erb
+++ b/app/views/report/drug_utilization_report.html.erb
@@ -66,6 +66,7 @@
             "aaSorting": [[ 0, "asc" ]],
             'iDisplayLength': 10,
             "bLengthChange": false,
+            "bRetrieve": true,
             "bFilter": false
         });
     } );
@@ -208,7 +209,7 @@
   <div style="width: 100%;margin-top:5px; text-align: center;">
     <table class="display" id="datalist" width="100%">
       <thead>
-      <tr>
+      <tr style="background-color:#66CC66">
         <th>Date</th>
         <th>Prescribed</th>
         <th>Dispensed</th>
@@ -273,6 +274,17 @@
             var row = create("tr", "table-row", "");
             row.style.width = "100%";
 
+            $("#datalist").dataTable().fnAddData([
+                new Date(day).toLocaleFormat('%d %b %Y'),
+                data[day]["prescription"].toString(),
+                data[day]['dispensation'].toString(),
+                get_pres_disp_diff(data[day]["prescription"],data[day]['dispensation'] ),
+                data[day]['relocated_drugs'].toString(),
+                data[day]['ppo_prescribed_drugs'].toString(),
+                data[day]['ppo_who_received_drugs'].toString(),
+                get_ppo_who_not_give_drug(data[day]['ppo_prescribed_drugs'],data[day]['ppo_who_received_drugs'])
+            ]);
+    /*
             var td1 = create("td", "table-data", new Date(day).toLocaleFormat('%d %b %Y'));
             td1.style.textAlign = "left"
             row.appendChild(td1);
@@ -307,8 +319,8 @@
             td8.style.textAlign = "center";
             row.appendChild(td8)
 
+            table.appendChild(row);*/
             var utc = new Date(day);
-            table.appendChild(row);
             prescription += data[day]["prescription"];
             dispensation += data[day]['dispensation'];
             relocation += data[day]['relocated_drugs'];
