--- a/app/views/report/site_report.html.erb
+++ b/app/views/report/site_report.html.erb
@@ -15,7 +15,7 @@
 <div style="width: 100%;text-align: center;">
   <table class="display" id="drugs" width="100%">
     <thead>
-    <tr>
+    <tr style="background-color:#66CC66">
       <th style="width: 10%">Date</th>
       <th style="width: 20%">Drug</th>
       <th style="width: 15%">Prescribed</th>
