--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -59,6 +59,9 @@
     width: 100%;
     height: 45vh;
   }
+  div.dataTables_filter, div.dataTables_length{
+      display: none ;
+  }
 </style>
 <script type="text/javascript" charset="utf-8">
   $(document).ready(function() {
@@ -66,7 +69,17 @@
       "aaSorting": [[ 0, "asc" ]],
       'iDisplayLength': 10,
       "bLengthChange": false,
-      "bFilter": false
+      "bRetrieve": true,
+      "bFilter": false,
+      "oSearch ":false,
+      "aoColumns": [
+          { "sTitle": "date", "sClass": "right"},
+          { "sTitle": "available", "sClass": "center"},
+          { "sTitle": "difference", "sClass": "right"},
+          { "sTitle": "prescribed", "sClass": "right"},
+          { "sTitle": "dispensed", "sClass": "right"},
+          { "sTitle": "omanidwa", "sClass": "right"}
+       ]
     });
   } );
 
@@ -150,7 +163,7 @@
     <table class="display" id="datalist" width="100%">
       <thead>
           <tr style="background-color:#66CC66">
-            <th>Date</th>
+            <th style="width: 15%;">Date</th>
             <th>Available Stock<br>(Supervised)</th>
             <th>Difference with<br> clinic stock</th>
             <th>People  <br>Precribed Drug</th>
@@ -207,7 +220,15 @@
       var row = create("tr", "table-row", "");
       row.style.width = "100%";
 
-      var td1 = create("td", "table-data", new Date(day).toLocaleFormat('%d %b %Y'));
+        $("#datalist").dataTable().fnAddData([
+            new Date(day).toLocaleFormat('%d %b %Y'),
+            data[day]["supervision"].toString(),
+            data[day]['clinic'].toString(),
+            data[day]["ppo_prescribed_drugs"],
+            data[day]['ppo_who_received_drugs'].toString(),
+            get_ppo_not_given_drug(data[day]['ppo_prescribed_drugs'],data[day]['ppo_who_received_drugs'])
+        ]);
+      /*var td1 = create("td", "table-data", new Date(day).toLocaleFormat('%d %b %Y'));
       td1.style.textAlign = "left"
       row.appendChild(td1);
 
@@ -236,9 +257,10 @@
       var td7 = create("td", "table-data", get_ppo_not_given_drug(data[day]['ppo_prescribed_drugs'],data[day]['ppo_who_received_drugs']));
       td7.style.textAlign = "center";
       row.appendChild(td7)
-
+       table.appendChild(row);
+      */
       var utc = new Date(day);
-      table.appendChild(row);
+
 
       supervised_array.push([Date.UTC(utc.getFullYear(), utc.getMonth() ,utc.getDate()), data[day]['supervision']]);
       ;
