--- a/app/views/layouts/report_layout.html.erb
+++ b/app/views/layouts/report_layout.html.erb
@@ -54,11 +54,11 @@
       for (var i = 0; i < arr.length; i ++){
         try{
           if (cat == "pills")
-            arr[i].innerHTML = parseInt(arr[i].getAttribute("pills")).toFixed(0).replace(/./g, function(c, i, a) {
+            arr[i].innerHTML = Math.round(arr[i].getAttribute("pills")).toFixed(0).replace(/./g, function(c, i, a) {
               return i && c !== "." && !((a.length - i) % 3) ? ',' + c : c;
             });
           else if (cat == "tins"){
-            arr[i].innerHTML = (parseInt((arr[i].innerHTML.replace(/,/g, "")) / 60)).toFixed(0).replace(/./g, function(c, i, a) {
+            arr[i].innerHTML = (Math.round((arr[i].innerHTML.replace(/,/g, "")) / 60)).toFixed(0).replace(/./g, function(c, i, a) {
               return i && c !== "." && !((a.length - i) % 3) ? ',' + c : c;
             });
           }
